addind more changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    <div class="main-section">
+      
 
     <nav id="navbar">
       <header>JS Documentation by Joffery</header>
@@ -45,7 +46,7 @@
     </nav>
     <main id="main-doc">
       <section class="main-section" id="Introduction">
-        <header>Introduction</header>
+        <header id="header">Introduction</header>
         <article>
           <p>
             JavaScript is a cross-platform, object-oriented scripting language. It
@@ -440,6 +441,7 @@
         </article>
       </section>
     </main>
+    </div>
     
 
 
